--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,21 +8,68 @@
   color: grey;
 }
 
+.Texto1 {
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+}
+
+.texto2 {
+  font-family: "Raleway", sans-serif;
+  font-weight: normal;
+  font-size: 15px;
+  text-align: justify;
+}
+
+.caracteristicas {
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+  text-align: center;
+}
+
+.estadisticas {
+  font-family: "Raleway", sans-serif;
+  font-weight: normal;
+  font-size: 30px;
+  text-align: left;
+}
+
+.texto3 {
+  font-family: "Raleway", sans-serif;
+  font-weight: normal;
+  font-size: 20px;
+  text-align: left;
+}
+
 * {
-  max-width: 1280px;
-  max-height: 2000px;
+  max-width: 1366px;
+  max-height: auto;
   margin: 0px;
   padding: 0px;
 }
 
-.card .grid {
-  display: grid;
-  grid-template-columns: 50px 300px;
-  grid-template-rows: 200px 75px;
+.cabecera {
+  position: absolute;
+  top: 80px;
+  left: 0;
+  width: 360px;
+  height: 100px;
 }
 
-.fondoprecios {
-  background-image: url();
+.rectangulo {
+  width: 1336px;
+  height: 200px;
+}
+
+.responsive {
+  width: 100%;
+  height: auto;
+}
+
+.container-flex {
+  width: 100%;
+  height: auto;
 }
 
 .navbar-toggler-icon {
