--- a/assets/scss/abstracts/_tipografias.scss
+++ b/assets/scss/abstracts/_tipografias.scss
@@ -8,3 +8,37 @@
 .nav-link   {
   color: grey;
 }
+
+.Texto1   {
+  font-family: $tipografia1;
+  font-weight: bold;
+  font-size: 40px;
+}
+
+.texto2   {
+  font-family: $tipografia1;
+  font-weight: normal;
+  font-size: 15px;
+  text-align: justify;
+}
+
+.caracteristicas  {
+  font-family: $tipografia1;
+  font-weight: bold;
+  font-size: 40px;
+  text-align: center;
+}
+
+.estadisticas   {
+  font-family: $tipografia1;
+  font-weight: normal;
+  font-size: 30px;
+  text-align: left;
+}
+
+.texto3   {
+  font-family: $tipografia1;
+  font-weight: normal;
+  font-size: 20px;
+  text-align: left;
+}
