--- a/assets/scss/base/_grilla.scss
+++ b/assets/scss/base/_grilla.scss
@@ -1,15 +1,29 @@
 *     {
-  max-width: 1280px;
-  max-height: 2000px;
+  max-width: 1366px;
+  max-height: auto;
   margin: 0px;
   padding: 0px;
 }
-
-
-.card   {
-  .grid {
-  display: grid;
-  grid-template-columns: 50px 300px;
-  grid-template-rows: 200px 75px;
+.cabecera   {
+  position: absolute;
+  top: 80px;
+  left: 0;
+  width: 360px;
+  height: 100px;
 }
+
+.rectangulo   {
+  width: 1336px;
+  height: 200px;
+}
+
+
+.responsive  {
+width: 100%;
+height: auto;
+}
+
+.container-flex   {
+  width: 100%;
+  height: auto;
 }
