--- a/assets/scss/abstracts/_tipografias.scss
+++ b/assets/scss/abstracts/_tipografias.scss
@@ -20,6 +20,7 @@
   font-weight: normal;
   font-size: 15px;
   text-align: justify;
+  
 }
 
 .caracteristicas  {
@@ -41,4 +42,11 @@
   font-weight: normal;
   font-size: 20px;
   text-align: left;
+}
+
+.tituloprecio   {
+  font-family: $tipografia1;
+  font-weight: bold;
+  font-size: 35px;
+  text-align: center;
 }
