--- a/assets/scss/base/_grilla.scss
+++ b/assets/scss/base/_grilla.scss
@@ -1,23 +1,18 @@
-*     {
-  max-width: 1366px;
+*            {
+  max-width:  1350px;
   margin: 0px;
   padding: 0px;
 }
 
-body      {
-  max-width: 1366px;
-}
-
-
-
-btn-primary  {
-  display: flex;
-  justify-content: flex-start;
+.container2 {
+position: absolute;
+ width:  1349px;
 }
 
 .card   {
   width: 311px;
   height: 368px;
+  margin: 26px;
 }
 
 .caracteristicas  {
@@ -28,15 +23,10 @@ margin-bottom: 46px;
   position: absolute;
 }
 
-.section  {
+.sesion  {
   display: flex;
   flex-direction: row;
 }
-
-.Texto1   {
-  position: absolute;
-}
-
 
 
 .rectangulo   {
@@ -45,11 +35,6 @@ margin-bottom: 46px;
 
   }
 
-
-.containprice  {
-    position: absolute;
-
-}
 
 .tituloprecio   {
   padding: 80px;
@@ -65,6 +50,12 @@ height: auto;
   text-align: left;
 }
 
+.fondoprecio  {
+  width: 100%;
+  height: auto;
+}
+
+
 footer  {
-  max-width: 1366px;
+  max-width: 1350px;
 }
