--- a/assets/scss/base/_grilla.scss
+++ b/assets/scss/base/_grilla.scss
@@ -1,12 +1,12 @@
-*            {
-  max-width:  1350px;
-  margin: 0px;
-  padding: 0px;
-}
 
 .container2 {
 position: absolute;
  width:  1349px;
+ height: auto;
+}
+
+button {
+  color: #55a7ff;
 }
 
 .card   {
@@ -26,6 +26,7 @@ margin-bottom: 46px;
 .sesion  {
   display: flex;
   flex-direction: row;
+  margin-left: 372px;
 }
 
 
@@ -34,10 +35,13 @@ margin-bottom: 46px;
   height: 435px;
 
   }
+.portada1   {
+  padding: 40px;
+}
 
 
 .tituloprecio   {
-  padding: 80px;
+  padding: 40px;
 }
 
 .responsive  {
@@ -51,9 +55,9 @@ height: auto;
 }
 
 .fondoprecio  {
-  width: 100%;
-  height: auto;
+  position: static;
 }
+
 
 
 footer  {
