--- a/assets/scss/abstracts/_tipografias.scss
+++ b/assets/scss/abstracts/_tipografias.scss
@@ -4,6 +4,23 @@
   font-size: 50px;
 }
 
+.card-header  {
+  font-family: $tipografia1;
+  font-weight: normal;
+  font-size: 25px;
+}
+
+.card-title   {
+  font-family: $tipografia1;
+  font-weight: bold;
+  font-size: 40px;
+}
+
+.card-text  {
+  font-family: $tipografia1;
+  font-weight: normal;
+  font-size: 15px;
+}
 
 .nav-link   {
   color: grey;
