--- a/assets/scss/abstracts/_tipografias.scss
+++ b/assets/scss/abstracts/_tipografias.scss
@@ -40,17 +40,18 @@
 
 }
 
-.caracteristicas  {
+.titulocaracteristicas  {
   font-family: $tipografia1;
   font-weight: bold;
   font-size: 40px;
   text-align: center;
+  margin: 40px;
 }
 
 .estadisticas   {
   font-family: $tipografia1;
-  font-weight: normal;
-  font-size: 30px;
+  font-weight: bold;
+  font-size: 26px;
   text-align: left;
 }
 
