--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,15 @@
   text-align: center;
 }
 
+.footer {
+  font-family: "Raleway", sans-serif;
+  font-weight: normal;
+  font-size: 15px;
+  text-align: center;
+  height: 80px;
+  color: white;
+}
+
 button {
   color: #55a7ff;
   width: auto;
@@ -95,13 +104,12 @@ button {
   text-align: left;
 }
 
-.sesion {
-  display: flex;
-  flex-direction: row;
-}
-
 footer {
   max-width: 1350px;
+}
+
+.card-header {
+  background-color: white;
 }
 
 .imagenfondo {
@@ -131,6 +139,10 @@ footer {
 
 .tituloprecio {
   color: white;
+}
+
+.footer {
+  background-color: #221d23;
 }
 
 /*# sourceMappingURL=style.css.map */
