--- a/assets/scss/abstracts/_tipografias.scss
+++ b/assets/scss/abstracts/_tipografias.scss
@@ -68,3 +68,12 @@
   font-size: 35px;
   text-align: center;
 }
+
+.footer  {
+  font-family: $tipografia1;
+  font-weight: normal;
+  font-size: 15px;
+  text-align: center;
+  height: 80px;
+  color: white;
+}
